# bulkseq-studio

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  LICENSE  Launch BulkSeq Studio.bat  PLAN.md  README.md  launch_bulkseq_studio.ps1  pyproject.toml  requirements-build.txt  requirements.txt  tmp_run_fgval.sh  tmp_setup_fgval.py
app/: __init__.py  benchmark_cli.py  constants.py  main.py  simple_gui.py
docs/: analysis.html  benchmarks.html  deseq2_results_mode_spec.md  faq.html  guide.html  index.html  outputs.html
examples/: example_config.yaml  example_gene_list.txt  example_samples.tsv
packaging/: BulkSeqStudio.spec  build_appimage.sh  installer.iss
scripts/: build_release.ps1  launch_wsl_setup_admin.bat  release.ps1  setup_windows_wsl_admin.ps1  setup_wsl_bioenv.sh
tests/: conftest.py  test_benchmark_cli.py  test_benchmark_datasets.py  test_config_generation.py  test_deseq2_results_mode.py  test_ena_gb.py  test_env_profiles.py  test_fetch_rrna_db.py  test_gui_smoke.py  test_html_report_enrichment.py  test_mapping_guardrail.py  test_meta_analysis.R  test_metadata.py  test_metadata_condition.py  test_metadata_editor.py  test_mode_gating.py  test_multistudy.py  test_paths.py  test_ppi_graph.py  test_project.py  test_provenance.py  test_readiness.py  test_reference_validation.py  test_report.py  test_resource_estimator.py  test_runtime_calibration.py  test_runtime_estimator.py  test_setup_installer.py  test_snakemake_runner.py  test_sra_metadata.py  test_validate_design.py  test_workflow_resync.py  test_wsl_probes.py  test_wslconfig.py
workflow/: Snakefile
(+127 files in other folders)
