[project]
name = "bulkseq-studio"
version = "0.11.2"
description = "Windows GUI project manager for reproducible bulk RNA-seq Snakemake workflows"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tuna Birgun" }]
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "pandas>=2.2",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "psutil>=5.9",
  "openpyxl>=3.1",
]

[project.scripts]
bulkseq-studio = "app.main:main"
bulkseq-benchmark = "app.benchmark_cli:main"

[project.optional-dependencies]
test = ["pytest>=8.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
